# pegasus2

./: .gitignore  LICENSE.txt  README.md
config/robots/: pegasus2.yaml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/arduino_communicator/: EncoderCounts.h
devel/lib/pkgconfig/: controller_interpreter.pc
misc_testing/carl/: test.txt
misc_testing/fin/: demo_detect_marker_from_colour.py  detect_marker_from_colour.py  example_video_contours.py  video_HSV_split.py  video_contours_sizecondition.py  write_video_detect_marker_from_colour.py
src/arduino_communicator/: CMakeLists.txt  package.xml
src/arduino_communicator/msg/: EncoderCounts.msg
src/arduino_communicator/scripts/: arduino_communicator_node.py  reset_arduino.py
src/controller_interpreter/: CMakeLists.txt  package.xml
src/controller_interpreter/msg/: ArmCommand.msg
src/controller_interpreter/scripts/: controller_interpreter.py  controller_interpreter_node.py  turtle_test_script.py
src/encodometry/: CMakeLists.txt  package.xml
src/encodometry/nodes/: test.py  wheel_odometry.py
src/launch/: move_base.launch  new_launch.launch  node_launch.launch  node_launch_2.launch  peggy_configuration.launch
src/navigation_2d/: CMakeLists.txt  costmap_common_params.yaml  package.xml
src/navigation_2d/maps/: testmap.yaml
src/pegasus_nav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  frames.gv  local_costmap_params.yaml  package.xml
src/pegasus_nav/maps/: map.yaml
src/robot_localization/launch/: ekf_attempt.launch
src/robot_localization/params/: dual_ekf_navsat_example.yaml  ekf_attempt.yaml  ekf_template.yaml
src/rover_frames/: CMakeLists.txt  package.xml
src/rover_frames/launch/: frames.launch
src/rover_frames/nodes/: imu_tf_broadcaster.py  link_footprint_tf.py  map_odom_tf.py  rot_camera_tf.py  rot_camera_tf_2.py  (+2 more)
src/servo_code/: servo_code.ino
src/skid_steer_controller/: CMakeLists.txt  package.xml
(+21 files in other folders)
