<?xml version="1.0"?>
<package format="2">
  <name>arduino_communicator</name>
  <version>0.0.1</version>
  <description>Sends rover control data to and reads encoder data from the integrated Intel Curie board</description>

  <maintainer email="carl.heimann@gmail.com">Carl Heimann</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>controller_interpreter</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>controller_interpreter</exec_depend>
</package>
