<?xml version="1.0"?>
<package format="2">
  <name>controller_interpreter</name>
  <version>0.0.0</version>
  <description>The controller_interpreter package</description>

  <maintainer email="carl.heimann@gmail.com">carl</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
